--- a/almacenamiento.bib
+++ b/almacenamiento.bib
@@ -70,6 +70,13 @@
   language = {es-ES}
 }
 
+@misc{bibliotecasuniversitarias_Make_2020,
+  title = {Make {{Your Data Discoverable}} | {{University}} of {{Oklahoma Libraries}}},
+  author = {Bibliotecas Universitarias},
+  year = {2020},
+  howpublished = {https://libraries.ou.edu/content/make-your-data-discoverable}
+}
+
 @misc{bica_Rendezview_2015,
   title = {Rendezview: {{An Interactive Visual Mining Tool}} for {{Discerning Flock Relationships}} in {{Social Media Data}}},
   author = {Bica, Melissa and Kim, Kyoung-Sook},
@@ -146,11 +153,10 @@
   howpublished = {https://creativecommons.org/licenses/?lang=es}
 }
 
-@misc{cilac_Ciencia_2019,
-  title = {Ciencia Abierta. {{Reporte}} Para Tomadores de Decisiones},
-  shorttitle = {Ciencia Abierta.},
-  author = {CILAC},
-  year = {2019}
+@misc{ccsds_Recommendation_2012,
+  title = {Recommendation for {{Space Data System Practices MAGENTA BOOK REFERENCE MODEL FOR AN OPEN ARCHIVAL INFORMATION SYSTEM}} ({{OAIS}})},
+  author = {CCSDS},
+  year = {2012}
 }
 
 @misc{collins_Social_2015,
@@ -197,6 +203,30 @@
   number = {3}
 }
 
+@article{cruzmundet_Sistema_2016,
+  title = {{Sistema de Informaci\'on de Archivo Abierto (OAIS): luces y sombras de un modelo de referencia}},
+  shorttitle = {{Sistema de Informaci\'on de Archivo Abierto (OAIS)}},
+  author = {Cruz Mundet, Jos{\'e} Ram{\'o}n and D{\'i}ez Carrera, Carmen},
+  year = {2016},
+  month = sep,
+  volume = {30},
+  pages = {221--247},
+  issn = {0187358X},
+  doi = {10.1016/j.ibbai.2016.10.010},
+  file = {files/8704/Cruz Mundet y Díez Carrera - 2016 - Sistema de Información de Archivo Abierto (OAIS) .pdf},
+  journal = {Investigaci\'on Bibliotecol\'ogica: Archivonom\'ia, Bibliotecolog\'ia e Informaci\'on},
+  language = {es},
+  number = {70}
+}
+
+@misc{dandrea_Meetup_2020,
+  title = {Meetup {{R}}-{{Ladies Jujuy}}},
+  author = {D'Andrea, Dra Florencia},
+  year = {2020},
+  abstract = {Mi pr\'oximo art\'iculo cient\'ifico con R: Compendios de Investigaci\'on, Reproducibilidad e Interactividad en las publicaciones acad\'emicas},
+  howpublished = {https://flor14.github.io/rladies-jujuy/presentacion.html?panelset=licencia\#1}
+}
+
 @misc{ddc_Using_2017,
   title = {Using {{RISE}}, the {{Research Infrastructure Self Evaluation Framework}} | {{DCC}}},
   author = {DDC},
@@ -226,6 +256,17 @@
   number = {4}
 }
 
+@misc{desai_Research_2018,
+  title = {Research {{Guides}}: {{Data Management Plans}} for the {{Social Sciences}}: {{Formats}} and {{Metadata}}},
+  shorttitle = {Research {{Guides}}},
+  author = {Desai, Shevon},
+  year = {2018},
+  abstract = {Suggested resources for designing data management plans (DMP) for your research project.},
+  copyright = {Copyright University of Michigan Library 2020},
+  howpublished = {https://guides.lib.umich.edu/c.php?g=480970\&p=3288170},
+  language = {en}
+}
+
 @misc{dublin-core_Dublin_2020,
   title = {Dublin {{Core Metadata Initiative}}},
   author = {{Dublin-Core}},
@@ -233,9 +274,9 @@
   howpublished = {http://dublincore.org/}
 }
 
-@misc{europeancommision_FAIR_2016,
+@misc{ec_FAIR_2016,
   title = {{{FAIR Data Management}} in {{Horizon}} 2020},
-  author = {European Commision},
+  author = {EC},
   year = {2016}
 }
 
@@ -351,14 +392,60 @@
 
 @misc{icpsr_Confidentiality_,
   title = {Confidentiality},
-  author = {{icpsr}},
+  author = {ICPSR},
   howpublished = {https://www.icpsr.umich.edu/web/pages/datamanagement/confidentiality/index.html}
+}
+
+@misc{icpsr_Glossary_2020,
+  title = {Glossary of {{Social Science Terms}}},
+  author = {ICPSR},
+  year = {2020},
+  howpublished = {https://www.icpsr.umich.edu/web/ICPSR/cms/2042}
+}
+
+@misc{icpsr_Guide_2020,
+  title = {Guide to {{Social Science Data Preparation}} and {{Archiving}}: 6th {{Ed}}.},
+  shorttitle = {Guide to {{Social Science Data Preparation}} and {{Archiving}}},
+  author = {ICPSR},
+  year = {2020},
+  howpublished = {https://www.icpsr.umich.edu/web/pages/deposit/guide/index.html},
+  language = {en}
 }
 
 @misc{icpsr_Ingest_,
   title = {Ingest},
-  author = {{icpsr}},
+  author = {ICPSR},
   howpublished = {https://www.icpsr.umich.edu/web/pages/datamanagement/lifecycle/ingest/enhance.html}
+}
+
+@misc{icpsr_Start_2020,
+  title = {Start {{Sharing Data}}},
+  author = {ICPSR},
+  year = {2020},
+  howpublished = {https://www.icpsr.umich.edu/web/pages/deposit/index.html}
+}
+
+@misc{ics_Open_2020,
+  title = {Open {{Science}} for the 21st {{Century}}},
+  author = {ICS},
+  year = {2020},
+  abstract = {I}
+}
+
+@misc{icsu_Open_2014,
+  title = {Open Access to Scientific Data and Literature and the Assessment of Research by Metrics},
+  author = {ICSU},
+  year = {2014},
+  language = {English}
+}
+
+@misc{icsu_Open_2020,
+  title = {Open Access to Scientific Data and Literature and the Assessment of Research by Metrics},
+  author = {ICSU},
+  year = {2020},
+  abstract = {A report developed by a Sub-Group of the ICSU Executive Board, with input from individuals attending an expert workshop, ICSU Members and the ICSU Secretariat.},
+  journal = {International Science Council},
+  language = {en-US}
 }
 
 @article{ignat_Built_2020,
@@ -413,6 +500,16 @@
   number = {1}
 }
 
+@misc{kryvokhyzha_best_2019,
+  title = {The Best Free {{Research Data Repository}}},
+  author = {Kryvokhyzha, Dmytro},
+  year = {2019},
+  abstract = {I compare the most popular repository for research data: Dryad, Zenodo, FigShare, Open Science Framework, and Mendeley.},
+  howpublished = {https://evodify.com/free-research-repository/},
+  journal = {Dmytro Kryvokhyzha - Bioinformatics \& Genomics Scientist},
+  language = {en-US}
+}
+
 @misc{lapop_Inicio_2020,
   title = {Inicio},
   author = {LAPOP},
@@ -444,6 +541,17 @@
   title = {Hydra: {{A High}}-{{Throughput Virtual Screening Data Visualization}} and {{Analysis Tool Shelby Matlock}}},
   author = {Matlock, Shelby and Sera, Curtis and Ichikawa,, Kohei and Haga, Jason},
   year = {2015}
+}
+
+@book{meieroefer_Data_1993,
+  title = {Data Resources of the National Institute of Justice.},
+  author = {Meieroefer, Barbara},
+  year = {1993},
+  publisher = {{Diane Pub Co}},
+  address = {{Place of publication not identified}},
+  annotation = {OCLC: 948364344},
+  isbn = {978-0-7881-7000-3},
+  language = {English}
 }
 
 @article{meneses-rivasfrancisco_Bases_2020,
@@ -515,6 +623,16 @@
   howpublished = {https://www.oecd.org/science/inno/open-science.htm}
 }
 
+@misc{ocs_Laboratorio_2020,
+  title = {{Laboratorio de Ciencia Social Abierta}},
+  author = {{OCS}},
+  year = {2020},
+  abstract = {Sitio desarrollado por valentinaandrade por template devcows usando hugo},
+  howpublished = {https://lisa-coes.netlify.app/},
+  journal = {Laboratorio de Ciencia Social Abierta},
+  language = {es-cl}
+}
+
 @misc{open-knowledge_opendatahandbook_2020,
   title = {{opendatahandbook}},
   author = {{Open-Knowledge}},
@@ -556,6 +674,20 @@
   language = {Catalan}
 }
 
+@article{piwowar_Data_2013,
+  title = {Data Reuse and the Open Data Citation Advantage},
+  author = {Piwowar, Heather A. and Vision, Todd J.},
+  year = {2013},
+  month = oct,
+  volume = {1},
+  pages = {e175},
+  issn = {2167-8359},
+  doi = {10.7717/peerj.175},
+  abstract = {Background. Attribution to the original contributor upon reuse of published data is important both as a reward for data creators and to document the provenance of research findings. Previous studies have found that papers with publicly available datasets receive a higher number of citations than similar studies without available data. However, few previous analyses have had the statistical power to control for the many variables known to predict citation rate, which has led to uncertain estimates of the ``citation benefit''. Furthermore, little is known about patterns in data reuse over time and across datasets. Method and Results. Here, we look at citation rates while controlling for many known citation predictors and investigate the variability of data reuse. In a multivariate regression on 10,555 studies that created gene expression microarray data, we found that studies that made data available in a public repository received 9\% (95\% confidence interval: 5\% to 13\%) more citations than similar studies for which the data was not made available. Date of publication, journal impact factor, open access status, number of authors, first and last author publication history, corresponding author country, institution citation history, and study topic were included as covariates. The citation benefit varied with date of dataset deposition: a citation benefit was most clear for papers published in 2004 and 2005, at about 30\%. Authors published most papers using their own datasets within two years of their first publication on the dataset, whereas data reuse papers published by third-party investigators continued to accumulate for at least six years. To study patterns of data reuse directly, we compiled 9,724 instances of third party data reuse via mention of GEO or ArrayExpress accession numbers in the full text of papers. The level of third-party data use was high: for 100 datasets deposited in year 0, we estimated that 40 papers in PubMed reused a dataset by year 2, 100 by year 4, and more than 150 data reuse papers had been published by year 5. Data reuse was distributed across a broad base of datasets: a very conservative estimate found that 20\% of the datasets deposited between 2003 and 2007 had been reused at least once by third parties. Conclusion. After accounting for other factors affecting citation rate, we find a robust citation benefit from open data, although a smaller one than previously reported. We conclude there is a direct effect of third-party data reuse that persists for years beyond the time when researchers have published most of the papers reusing their own data. Other factors that may also contribute to the citation benefit are considered. We further conclude that, at least for gene expression microarray data, a substantial fraction of archived datasets are reused, and that the intensity of dataset reuse has been steadily increasing since 2003.},
+  journal = {PeerJ},
+  language = {en}
+}
+
 @misc{programadeinformacioncientifica_Ciencia_2019,
   title = {La {{Ciencia}} La Hacemos Entre Todos},
   author = {{Programa de Informaci{\'o}n Cient{\'i}fica}, Ministerio de Desarrollo},
@@ -570,6 +702,20 @@
   year = {2020}
 }
 
+@misc{ramirez_Ciencia_2019,
+  title = {Ciencia Abierta. {{Reporte}} Para Tomadores de Decisiones},
+  shorttitle = {Ciencia Abierta.},
+  author = {Ram{\'i}rez, Paola and Samoilovich, Daniel},
+  year = {2019}
+}
+
+@misc{recker_Introduction_,
+  title = {Introduction to {{Research Data Management}} for {{Social Scientists}},},
+  author = {Recker, Astrid and Netscher, Sebastian},
+  abstract = {CESSDA Training at the Data Archive for the Social Sciences GESIS - Leibniz Institute for the Social Sciences @CESSDA\_Data},
+  language = {en}
+}
+
 @misc{reproducibleresearch_Encuesta_2020,
   title = {Encuesta Sobre {{Conflicto}} y {{Cohesion Social}} En {{Chile}} 2014},
   author = {Reproducible Research, Centre for Social Conflict {and} Cohesion Studies COES},
@@ -577,6 +723,37 @@
   month = jul,
   doi = {10.7910/DVN/SRPWFW},
   abstract = {The Survey on Conflict and Social Cohesion in Chile (ENACOES 2014) seeks to contribute to the understanding of beliefs, attitudes, and perceptions ...},
+  language = {en}
+}
+
+@misc{roark_Library_,
+  title = {Library {{Guides}}: {{Sensitive Research Data Management}}: {{Guides}}, {{Articles}} and {{Other Resources}}},
+  shorttitle = {Library {{Guides}}},
+  author = {Roark, Kendall},
+  abstract = {A guide for addressing issues with sharing research data involving human subjects or other sensitive data sets. A list of guides, reports, articles, etc. that pertain to managing and/or sharing sensitive data},
+  copyright = {Copyright Purdue University Libraries 2021},
+  howpublished = {https://guides.lib.purdue.edu/c.php?g=352785\&p=2377928},
+  language = {en}
+}
+
+@misc{roark_Library_2019,
+  title = {Library {{Guides}}: {{Sensitive Research Data Management}}: {{Guides}}, {{Articles}} and {{Other Resources}}},
+  shorttitle = {Library {{Guides}}},
+  author = {Roark, Kendall},
+  year = {2019},
+  abstract = {A guide for addressing issues with sharing research data involving human subjects or other sensitive data sets. A list of guides, reports, articles, etc. that pertain to managing and/or sharing sensitive data},
+  copyright = {Copyright Purdue University Libraries 2020},
+  howpublished = {https://guides.lib.purdue.edu/c.php?g=352785\&p=2377925},
+  language = {en}
+}
+
+@misc{roark_Library_a,
+  title = {Library {{Guides}}: {{Sensitive Research Data Management}}: {{Guides}}, {{Articles}} and {{Other Resources}}},
+  shorttitle = {Library {{Guides}}},
+  author = {Roark, Kendall},
+  abstract = {A guide for addressing issues with sharing research data involving human subjects or other sensitive data sets. A list of guides, reports, articles, etc. that pertain to managing and/or sharing sensitive data},
+  copyright = {Copyright Purdue University Libraries 2021},
+  howpublished = {https://guides.lib.purdue.edu/c.php?g=352785\&p=2377928},
   language = {en}
 }
 
@@ -592,6 +769,22 @@
   journal = {Behavior Research Methods},
   language = {en},
   number = {3}
+}
+
+@misc{sca_Que_2018,
+  title = {{\textquestiondown Qu\'e es CAPI, CATI Y CAWI en el mundo de las encuestas?}},
+  author = {SCA, Nexo},
+  year = {2018},
+  abstract = {La implementaci\'on de la entrevista asistida por ordenador en el mundo de las encuestas ha permitido a las empresas y centros de investigaci\'on reducir costos. En ocasiones, no todas las personas est\'an familiarizadas con los t\'erminos utilizados. Debido a ello, puede ser interesante definir las diferentes modalidades. CAPI (Computer-Assisted Personal Interviewing) o entrevista asistida por \ldots},
+  journal = {Nexo SCA},
+  language = {es}
+}
+
+@misc{sharan_Ten_2020,
+  title = {Ten Arguments against {{Open Science}} That You Can Win | {{Software Sustainability Institute}}},
+  author = {Sharan, Malvika},
+  year = {2020},
+  howpublished = {https://www.software.ac.uk/blog/2020-12-17-ten-arguments-against-open-science-you-can-win}
 }
 
 @misc{unesco_Que_2020,
